feat: 상품 이미지 업로드 인프라 구현 (Presigned URL + MinIO) (#1)
AWS SDK v2 기반 S3 호환 Presigned URL 방식으로 이미지 업로드 인프라를 구축.
로컬은 MinIO(Docker), 운영은 Cloudflare R2로 환경변수 교체만으로 전환 가능.
ProductImage 도메인에 storageKey/mimeType/fileSize 필드를 추가하고,
헥사고날 포트(ImageStoragePort, IssueImageUploadUrlUseCase)로 스토리지 추상화.

Co-authored-by: Claude Opus 4.7 <noreply@anthropic.com>